# cdc-card-reader

./: Cargo.toml  Makefile  README.md  memory.x
.cargo/: config.toml
src/: driver.rs  main.rs  sd.rs
